--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Welcome to MadByAd Link Directory">
     <meta name="keywords" content="MadByAd, Adit, Aditya, Aditya Wahyu Santoso">
     <title>MadByAd | Link Directory</title>
