--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         </div>
     </div>
 
+    <div class="scroll--info">
+        <p>&downarrow; Scroll Down &downarrow;</p>
+    </div>
+
     <div class="content" id="content">
         <div class="content--lists">
             <h2>My Links 🔗</h2>
@@ -54,10 +58,16 @@
                 <img src="./icons/Instagram.svg" alt="Logo of Instagram">
                 <p>my Instagram page where i occasionally post my work there</p>
             </a>
+            <hr>
+            <h2>Other Directory</h2>
+            <a class="content--card" href="./apps">
+                <h3>MY APPS & GAMES</h3>
+                <img src="./icons/App.svg" alt="An image of a joystick">
+                <p>list of all apps and games i created</p>
+            </a>
         </div>
+        <p style="padding: 2rem; text-align: center; color: #555;">Copyright &copy; MadByAd 2024</p>
     </div>
-
-    <p style="padding: 2rem; text-align: center; color: #555;">Copyright &copy; MadByAd 2024</p>
 
     <script>
         window.addEventListener("scroll", (event) => {
