--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <div class="content" id="content">
         <div class="content--lists">
             <h2>My Links 🔗</h2>
+            <a class="content--card" href="./apps">
+                <h3>APPS & GAMES</h3>
+                <img src="./icons/App.svg" alt="An image of a joystick">
+                <p>list of all apps and games i created</p>
+            </a>
             <a class="content--card" target="_blank" href="https://play.google.com/store/apps/dev?id=7894522532614647574">
                 <h3>PLAYSTORE</h3>
                 <img src="./icons/Playstore.svg" alt="Logo of playstore">
@@ -57,13 +62,6 @@
                 <h3>INSTAGRAM</h3>
                 <img src="./icons/Instagram.svg" alt="Logo of Instagram">
                 <p>my Instagram page where i occasionally post my work there</p>
-            </a>
-            <hr>
-            <h2>Other Directory</h2>
-            <a class="content--card" href="./apps">
-                <h3>MY APPS & GAMES</h3>
-                <img src="./icons/App.svg" alt="An image of a joystick">
-                <p>list of all apps and games i created</p>
             </a>
         </div>
         <p style="padding: 2rem; text-align: center; color: #555;">Copyright &copy; MadByAd 2024</p>
