simplified the website

--- a/index.html
+++ b/index.html
@@ -35,18 +35,13 @@
             <h2>My Links 🔗</h2>
             <a class="content--card" href="./apps">
                 <h3>APPS & GAMES</h3>
-                <img src="./icons/App.svg" alt="An image of a joystick">
-                <p>list of all apps and games i created</p>
+                <img src="./icons/Itch.svg" alt="Logo of itch.io">
+                <p>list of all apps and games i have created</p>
             </a>
             <a class="content--card" target="_blank" href="https://play.google.com/store/apps/dev?id=7894522532614647574">
                 <h3>PLAYSTORE</h3>
                 <img src="./icons/Playstore.svg" alt="Logo of playstore">
                 <p>the place for downloading games for android</p>
-            </a>
-            <a class="content--card" target="_blank" href="https://madbyad.itch.io">
-                <h3>ITCH IO</h3>
-                <img src="./icons/Itch.svg" alt="Logo of itch.io">
-                <p>the place for downloading games for windows</p>
             </a>
             <a class="content--card" target="_blank" href="https://github.com/MadByAd">
                 <h3>GITHUB</h3>
