forgot to update link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="content" id="content">
         <div class="content--lists">
             <h2>My Links 🔗</h2>
-            <a class="content--card" href="./apps">
+            <a class="content--card" href="https://madbyad.itch.io">
                 <h3>APPS & GAMES</h3>
                 <img src="./icons/Itch.svg" alt="Logo of itch.io">
                 <p>list of all apps and games i have created</p>
