feat!: major updates to my website

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Welcome to MadByAd Link Directory">
+    <meta name="description" content="Hello This is MadByAd, Stands for Made By Aditya. Im a programmer who makes game and sometimes creative art. Welcome to my Developer Site">
     <meta name="keywords" content="MadByAd, Adit, Aditya, Aditya Wahyu Santoso">
-    <title>MadByAd | Link Directory</title>
+    <title>MadByAd</title>
 
     <link rel="stylesheet" href="./style/index.css">
 
@@ -18,7 +18,7 @@
     <div class="head" id="head">
         <div class="head--content">
             <h1>Hello This is <span style="background: #fff9; border-radius: 10px; padding: 0 1rem;"><span class="head--gradient">MadByAd</span></span> 👋</h1>
-            <p>Welcome to my link directory 🙌. <br> This is where i put links 🔗 to my other social media account or my projects & products</p>
+            <p>Hello This is MadByAd, Stands for Made By Aditya. Im a programmer who makes game and sometimes creative art. Welcome to my Developer Site</p>
         </div>
         <div class="head--image">
             <img src="./image/Aditya.png" alt="photograph of Aditya Wahyu Santoso">
@@ -32,6 +32,12 @@
 
     <div class="content" id="content">
         <div class="content--lists">
+            <h2>About MadByAd</h2>
+            <p>
+                MadByAd stands for (Made By Aditya) is an Indonesian Developer. I love making games that are simple and
+                fun. Most of my game you can see in my Itch.Io, but i also have a playstore too. I also have a hobby for
+                creative art using blender as i believe creativity can create interesting games
+            </p>
             <h2>My Links 🔗</h2>
             <a class="content--card" href="https://madbyad.itch.io">
                 <h3>APPS & GAMES</h3>
@@ -43,6 +49,26 @@
                 <img src="./icons/Playstore.svg" alt="Logo of playstore">
                 <p>the place for downloading games for android</p>
             </a>
+            <a class="content--card" target="_blank" href="https://www.instagram.com/madbyad/">
+                <h3>INSTAGRAM</h3>
+                <img src="./icons/Instagram.svg" alt="Logo of Instagram">
+                <p>my developer instagram page</p>
+            </a>
+            <a class="content--card" target="_blank" href="https://www.instagram.com/aditya_wahyu_dev/">
+                <h3>INSTAGRAM (PERSONAL)</h3>
+                <img src="./icons/Instagram.svg" alt="Logo of Instagram">
+                <p>my personal instagram page where i occasionally post my work there</p>
+            </a>
+            <a class="content--card" target="_blank" href="https://youtube.com/@MadByAd">
+                <h3>YouTube</h3>
+                <img src="./icons/Youtube.png" alt="Logo of YouTube">
+                <p>my developer youtube where i put my games video and sometimes creative vidoes</p>
+            </a>
+            <a class="content--card" target="_blank" href="https://youtube.com/@aditya-wahyu-dev">
+                <h3>YouTube (PERSONAL)</h3>
+                <img src="./icons/Youtube.png" alt="Logo of YouTube">
+                <p>my personal youtube where i post my personal videos and work</p>
+            </a>
             <a class="content--card" target="_blank" href="https://github.com/MadByAd">
                 <h3>GITHUB</h3>
                 <img src="./icons/Github.svg" alt="Logo of Github">
@@ -53,13 +79,18 @@
                 <img src="./icons/Github.svg" alt="Logo of Github">
                 <p>my personal github page where i put my personal stuff there</p>
             </a>
-            <a class="content--card" target="_blank" href="https://www.instagram.com/aditya_wahyu_dev/">
-                <h3>INSTAGRAM</h3>
-                <img src="./icons/Instagram.svg" alt="Logo of Instagram">
-                <p>my Instagram page where i occasionally post my work there</p>
+            <a class="content--card" target="_blank" href="https://madbyad.blogspot.com">
+                <h3>Blogger</h3>
+                <img src="./icons/Blogger.png" alt="Logo of Blogger">
+                <p>my blogging site where sometimes i write my diaries about my work</p>
+            </a>
+            <a class="content--card" target="_blank" href="https://adityaws.github.io">
+                <h3>Personal Site</h3>
+                <img src="./image/Aditya.png" alt="My Profile Picture">
+                <p>Check out my personal site</p>
             </a>
         </div>
-        <p style="padding: 2rem; text-align: center; color: #555;">Copyright &copy; MadByAd 2024</p>
+        <p style="padding: 2rem; text-align: center; color: #555;">Copyright &copy; MadByAd 2026</p>
     </div>
 
     <script>
