fix: forgot to add link

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
             <h2>About MadByAd</h2>
             <p>
                 MadByAd stands for (Made By Aditya) is an Indonesian Developer. I love making games that are simple and
-                fun. Most of my game you can see in my Itch.Io, but i also have a playstore too. I also have a hobby for
-                creative art using blender as i believe creativity can create interesting games
+                fun. Most of my game you can see in my <a href="https://madbyad.itch.io">Itch.Io</a>, but i also have a
+                <a href="https://play.google.com/store/apps/dev?id=7894522532614647574">Playstore</a> too. I also have
+                a hobby for creative art using blender as i believe creativity can create interesting games
             </p>
             <h2>My Links 🔗</h2>
             <a class="content--card" href="https://madbyad.itch.io">
