fix: added favicon & google site index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Hello This is MadByAd, Stands for Made By Aditya. Im a programmer who makes game and sometimes creative art. Welcome to my Developer Site">
     <meta name="keywords" content="MadByAd, Adit, Aditya, Aditya Wahyu Santoso">
+    <meta name="google-site-verification" content="EjzhAJgRePMoEl7Ylu9xBCjjLcukyn7zj8WJ8z9_uvU" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <title>MadByAd</title>
 
     <link rel="stylesheet" href="./style/index.css">
