--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <a href="https://play.google.com/store/apps/dev?id=7894522532614647574">Playstore</a> too. I also have
                 a hobby for creative art using blender as i believe creativity can create interesting games
             </p>
+            <a href="./about.html">Read More About Me →</a>
             <h2>My Links 🔗</h2>
             <a class="content--card" href="https://madbyad.itch.io">
                 <h3>APPS & GAMES</h3>
